--- a/GoogleUtilities/Example/GoogleUtilities.xcodeproj/xcshareddata/xcschemes/Example_iOS.xcscheme
+++ b/GoogleUtilities/Example/GoogleUtilities.xcodeproj/xcshareddata/xcschemes/Example_iOS.xcscheme
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "6003F589195388D20070C39A"
-               BuildableName = "GoogleUtilities_Example.app"
-               BlueprintName = "GoogleUtilities_Example"
+               BuildableName = "Example_iOS.app"
+               BlueprintName = "Example_iOS"
                ReferencedContainer = "container:GoogleUtilities.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -33,8 +33,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "6003F5AD195388D20070C39A"
-               BuildableName = "GoogleUtilities_Tests.xctest"
-               BlueprintName = "GoogleUtilities_Tests"
+               BuildableName = "Tests_iOS.xctest"
+               BlueprintName = "Tests_iOS"
                ReferencedContainer = "container:GoogleUtilities.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -53,8 +53,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "6003F589195388D20070C39A"
-            BuildableName = "GoogleUtilities_Example.app"
-            BlueprintName = "GoogleUtilities_Example"
+            BuildableName = "Example_iOS.app"
+            BlueprintName = "Example_iOS"
             ReferencedContainer = "container:GoogleUtilities.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -76,8 +76,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "6003F589195388D20070C39A"
-            BuildableName = "GoogleUtilities_Example.app"
-            BlueprintName = "GoogleUtilities_Example"
+            BuildableName = "Example_iOS.app"
+            BlueprintName = "Example_iOS"
             ReferencedContainer = "container:GoogleUtilities.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -95,8 +95,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "6003F589195388D20070C39A"
-            BuildableName = "GoogleUtilities_Example.app"
-            BlueprintName = "GoogleUtilities_Example"
+            BuildableName = "Example_iOS.app"
+            BlueprintName = "Example_iOS"
             ReferencedContainer = "container:GoogleUtilities.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
