--- a/GoogleUtilities/Example/Podfile
+++ b/GoogleUtilities/Example/Podfile
@@ -1,11 +1,11 @@
 use_frameworks!
 
-target 'GoogleUtilities_Example' do
+target 'Example_iOS' do
   platform :ios, '8.0'
 
   pod 'GoogleUtilities', :path => '../../'
 
-  target 'GoogleUtilities_Tests' do
+  target 'Tests_iOS' do
     inherit! :search_paths
     pod 'OCMock'
   end
