--- a/GoogleUtilities/Example/Podfile
+++ b/GoogleUtilities/Example/Podfile
@@ -9,6 +9,16 @@ target 'Example_iOS' do
     inherit! :search_paths
     pod 'OCMock'
   end
+
+  post_install do |installer_representation|
+    installer_representation.pods_project.targets.each do |target|
+        target.build_configurations.each do |config|
+            if config.name != 'Release'
+                config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= ['$(inherited)', 'GUL_UNSWIZZLING_ENABLED=1', 'GUL_APP_DELEGATE_TESTING=1']
+            end
+        end
+    end
+  end
 end
 
 target 'Example_macOS' do
