Introduce tooling to build the Zip file.

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,13 @@ DerivedData
 *.hmap
 *.ipa
 
+# Swift Package Manager
+*/.build
+ZipBuilder/Packages
+ZipBuilder/*.xcodeproj
+ZipBuilder/Package.resolved
+
+
 # IntelliJ
 .idea
 
